@@ -193,6 +193,7 @@ Bug Fixes:
  -- Suppress compiler warnings in player.cpp (Issue 143 and 144).
  -- Suppress compiler warnings in stringutil.cpp (Issue 109).
  -- Suppress compiler warnings in help.cpp (Issue 132).
+ -- Suppress compiler warnings in netcommon.cpp (Issues 141 and 142).
 
 
 Performance Enhancements:
